[project]
name = "langchain-practice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "langchain>=1.3.13",
    "langchain-core>=1.4.9",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.3.5",
    "langchain-tavily>=0.2.18",
    "python-dotenv>=1.2.2",
]
